fix: eslint errors cleared

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
-# Server sozlamalari
 PORT=4000
 NODE_ENV=development
 
-# MongoDB ulanish manzili
-MONGO_URI=mongodb+srv://olimjon_user:myRealPassword@cluster0.xxxxx.mongodb.net/water_delivery_db?retryWrites=true&w=majority
 
+MONGO_URI=mongodb+srv://Olimjon:Murtazoyev_05@blogproject.46qw3is.mongodb.net/
 
-# JWT maxfiy kalitlari
 JWT_ACCESS_SECRET=mySuperSecretKey12345
 JWT_REFRESH_SECRET=mySuperSecretRefreshKey
+
+
+GOOGLE_MAIL=murtazoyevolimjon54@gmail.com
+EMAIL_APP_PASSWORD=sdvz disr adok tiwn
