fix: Bugs fixed and server started successfully

--- a/.env
+++ b/.env
@@ -1,12 +1,16 @@
+# Server konfiguratsiyasi
 PORT=4000
 NODE_ENV=development
 
+# MongoDB ulanish
+MONGO_URI=mongodb+srv://Olimjon:Murtazoyev_05@blogproject.46qw3is.mongodb.net/water_logistics?retryWrites=true&w=majority
 
-MONGO_URI=mongodb+srv://Olimjon:Murtazoyev_05@blogproject.46qw3is.mongodb.net/
-
+# JWT konfiguratsiyasi
 JWT_ACCESS_SECRET=mySuperSecretKey12345
 JWT_REFRESH_SECRET=mySuperSecretRefreshKey
+JWT_ACCESS_EXPIRES=1d
+JWT_REFRESH_EXPIRES=7d
 
-
+# Email (Gmail) konfiguratsiyasi
 GOOGLE_MAIL=murtazoyevolimjon54@gmail.com
-EMAIL_APP_PASSWORD=sdvz disr adok tiwn
+EMAIL_APP_PASSWORD=xxxxxxxxxxxxxx   # 🔹 Gmail App Password yoziladi
